--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>mon site web</title>
+  <title>mon site web de débile</title>
 </head>
 
 <body>
   <h1>J'adore Trump</h1>
+  <img src="img/trump.jpg" width="400px">
 
 </body>
 
