Ajout de Sleepy Joe Biden

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
   <h1>J'adore Trump</h1>
   <img src="img/trump.jpg" width="400px">
+  <h1>Biden sleepy joe</h1>
+  <img src="img/biden.jpg" alt="sleepy joe" width="400px">
 
 </body>
 
