Ajout du beau manu

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <img src="img/trump.jpg" width="400px">
   <h1>Biden sleepy joe</h1>
   <img src="img/biden.jpg" alt="sleepy joe" width="400px">
+  <h1>Le beau manu</h1>
+  <img src="img/macron.jpg" alt="sleepy joe" width="400px">
 
 </body>
 
